# transcript-support

./: .gitignore  README.md
backend/: .env  cli.py  main.py  pyproject.toml  requirements.txt
backend/api/v1/: api.py
backend/api/v1/endpoints/: transcript.py
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: chat.py  documents.py  transcript.py
backend/app/core/: config.py
backend/app/schemas/: chat.py
backend/app/services/: ai_service.py  chunking_service.py  embedding_service.py  generation_service.py  ingestion_service.py  retrieval_service.py
backend/schemas/: transcript.py
backend/services/: ai_service.py
backend/tests/: test_chunking.py  test_embedding.py  test_generation.py  test_ingestion.py  test_retrieval.py
frontend/: jsconfig.json  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Flashcards.jsx  SourceInputSection.jsx  Summary.jsx
frontend/src/lib/: api.js
frontend/src/pages/: Home.jsx
