[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi[standard]>=0.135.1",
    "langchain>=1.2.18",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.11",
    "langchain-text-splitters>=1.1.2",
    "pydantic>=2.12.5",
    "pypdf>=6.11.0",
    "rich>=14.3.3",
    "sentence-transformers>=5.4.1",
    "tiktoken>=0.12.0",
    "typer>=0.24.1",
    "youtube-transcript-api>=1.2.4",
]
